Fixed z-index

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -71,6 +71,7 @@ button:hover {
 	border-radius: 4px;
 	list-style: none;
 	top: 80%;
+	z-index: 1;
 }
 
 .locations:hover .popover,
@@ -80,7 +81,7 @@ button:hover {
 	padding-bottom: 10px;
 }
 
-ul li {
+.popover ul li {
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
